--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -6,10 +6,10 @@ driver:
 lint:
   name: yamllint
 platforms:
-  - name: instance
-    zone: us-west1-a
+  - name: instance-travis
+    zone: europe-west1-b
     machine_type: f1-micro
-    image: debian-8
+    image: ubuntu-1604-xenial-v20170919
 provisioner:
   name: ansible
   lint:
